* Task/Bug Id: RESOLVED Bug #21098 Additional line appearing SPP data entry page on IE * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27661

--- a/software/caTissue/modules/core/src/main/web/css/catissue_suite.css
+++ b/software/caTissue/modules/core/src/main/web/css/catissue_suite.css
@@ -902,6 +902,7 @@ color: #000000;
     font-weight: bold;
 }
 .td_color_6e81a6_big {
+	background-color: white;
 	color: #074180;
     font-family: verdana;
     font-size: 12px;
